--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,28 @@
     transform: rotate(360deg);
   }
 }
+
+button {
+  padding: 0.25rem 1rem;
+  font-family: inherit;
+  border: none;
+  cursor: pointer;
+}
+
+button.primary {
+  background-color: var(--green);
+  color: white;
+}
+
+.card {
+  margin: 1rem;
+}
+
+.card img {
+  width: 100%;
+}
+
+.card button {
+  margin-top: 0.5rem;
+}
+
