--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.NavLink {
+  padding: 20px;
+  text-decoration: none;
+  text-size-adjust:   
+}
+
+section {
+  width: 500px;
+  margin: auto
+}
+
+.centered-text {
+  text-align: center
+}
