--- a/src/index.css
+++ b/src/index.css
@@ -13,18 +13,23 @@ code {
 }
 
 nav {
+  display: flex;
+  justify-content: center;
   margin-left:auto;
   margin-right:auto;
-  width:1000px;
   
 }
 
 .NavLink {
-  padding: 50px;
+  padding-right: 25px;
+  padding-left: 25px;
+  margin: 20px;
   text-decoration: none;
   font-family: Comic Sans MS;
   font-size: 35px;
-  border: 2px;   
+  border: 2px;
+  background-color: orange;
+  border-radius: 10px;   
 }
 
 section {
@@ -33,10 +38,32 @@ section {
 }
 
 .centered-text {
+  margin: 10px;
   text-align: center;
   font-family: Comic Sans MS
 }
 
 .comic {
   font-family: Comic Sans MS;
+}
+
+.character-div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.character-card{
+  text-align: center;
+  font-family: Comic Sans MS;
+  width: 40%;
+  padding: 10px;
+  background-color: pink;
+  margin: 10px;
+  border-radius: 20px;
+}
+
+.cardImage {
+  border-radius: 15px;
+  width: 90%;
 }
